@@ -175,8 +175,6 @@ foreach $file (@files) {
                             "-x $file -k file://$ior_emfile");
     $E->SpawnWaitKill (2*$tg_executor->ProcessStartWaitInterval ());
 
-    sleep(999);
-
     # Invoke executor - stop the application -.
     print "Invoking executor - stop the application -\n";
     $E = $tg_executor->CreateProcess ("$DANCE_ROOT/bin/dance_plan_launcher",
